<resources>
    <string name="app_name">蓝莓</string>
    <string name="send">发送</string>
    <string name="phone_number">手机号码</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="okay">确定</string>
    <string name="quit">放弃</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="settings">设置</string>
    <string name="more">更多</string>
    <string name="more_factory">查看全部工厂</string>
    <string name="use_camera">使用相机</string>
    <string name="select_album">选择相册</string>
    <string name="feedback">意见反馈</string>
    <string name="create">创建</string>
    <string name="report">举报</string>
    <string name="like">点赞</string>
    <string name="unlike">取消赞</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="fixture">假数据</string>
    <string name="login">登录</string>
    <string name="logout">注销帐号</string>
    <string name="search">搜索</string>
    <string name="snapshot">快照</string>
    <string name="loading_more">正在加载更多</string>
    <string name="copy_to_clipboard">复制至剪贴板</string>
    <string name="clipboard_copied">已复制至剪贴板</string>
    <string name="app_crash">应用程序奔溃</string>
    <string name="set_current_factory">设置在职工厂</string>
    <string name="clear_cache_succeed">清除缓存成功</string>
    <string name="server_object_error">服务器返回对象解析错误</string>
    <string name="server_connection_exception">无法访问服务器，请检查你的网络设置</string>
    <string name="server_500">服务器内部错误</string>
    <string name="not_found_circle">还没有跟你相关的打工圈</string>
    <string name="not_found_circle_tip">你可以搜索或者创建一个</string>
    <string name="not_found_history">你还没有搜索历史</string>
    <string name="not_found_history_tip">搜索跟你相关的打工圈吧</string>
    <string name="not_found_post">哎哟！这里空空如也</string>
    <string name="not_found_post_tip">去附近热门的圈子逛逛吧</string>
    <string name="not_found_comment">还没有人评论，抢个沙发吧</string>
    <string name="not_found_msg">还没有新消息哦</string>
    <string name="not_found_msg_tip">点赞、评论过的帖子有更新时，将收到消息提醒</string>
    <string name="not_found_praise">还没有收到赞哦</string>
    <string name="not_found_praise_tip">多多发帖、回帖，积累赞数吧</string>
    <string name="report_succeed">举报成功</string>
    <string name="report_type_1">色情暴力</string>
    <string name="report_type_2">违法违规</string>
    <string name="report_type_3">垃圾广告</string>
    <string name="report_type_4">人身攻击</string>
    <string name="report_type_5">虚假谣言</string>
    <string name="report_type_6">其它信息</string>
    <string name="share_succeed">分享成功</string>
    <string name="locating">定位中…</string>
    <string name="locating_failed">定位失败</string>
    <string name="new_version_to_upgrade">升级提醒</string>
    <string name="new_version">新版本: %s</string>
    <string name="download_upgrade">下载并升级</string>
    <string name="force_update_tip">你的客户端版本太旧，需要升级才能使用</string>
    <string name="cd_action_overflow">action_overflow</string>
    <string name="cd_action_left">action_left</string>
    <string name="register_phone_intro">手机号仅用来验证你的打工者身份\n并识别出你在蓝莓里认识的人</string>
    <string name="register">注册加入</string>
    <string name="register_success">注册成功</string>
    <string name="optional">（可不填）</string>
    <string name="invite">邀请码</string>
    <string name="receiving_captcha">你的手机%s会收到一条6位数字的验证码的短信</string>
    <string name="get_captcha">获取验证码</string>
    <string name="reget_captcha">重新发送(%s)</string>
    <string name="find_password">找回密码</string>
    <string name="captcha">验证码</string>
    <string name="request_success">请求成功，你将收到验证码短信</string>
    <string name="new_pwd_set">成功修改密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login_success">登录成功</string>
    <string name="find_friend">寻找朋友</string>
    <string name="publish_content">发表内容</string>
    <string name="publish_post">发表</string>
    <string name="who_will_see_this_secret">这是一条怎样的帖子</string>
    <string name="add_photo">添加照片</string>
    <string name="post_description">厂里的人都会看到这个帖子，而你的朋友或朋友的朋友会知道是认识的人发表的\n\n匿名帖子不展现身份信息，无法猜到作者是谁，你可以放心说秘密哦\n\n为维护良好的社区氛围，请注意文明用语，色情、暴力、攻击等违规内容，会被删除或作封号处理滴</string>
    <string name="got_it">知道啦</string>
    <string name="post_anonymously">编辑心情或小秘密</string>
    <string name="post_over_length">内容不能超过%1$d个字</string>
    <string name="quit_confirm">有内容未发布，确认放弃？</string>
    <string name="resume_editing">继续编辑</string>
    <string name="error_start_camera">启动相机应用错误</string>
    <string name="error_start_album">无法选择相册图片</string>
    <string name="send_succeed">发送成功</string>
    <string name="cannot_post_empty_content">不能发表空内容。</string>
    <string name="post_not_found">没有找到帖子</string>
    <string name="comment_load_failed">加载失败，请点击重试</string>
    <string name="select_circle">你在哪里工作？</string>
    <string name="search_circles">请输入你的企业名称查找</string>
    <string name="my_circles">打工圈</string>
    <string name="no_circles">没有找到打工圈</string>
    <string name="factory">工</string>
    <string name="business">商</string>
    <string name="most_friends">朋友最多</string>
    <string name="nearest">距离最近</string>
    <string name="last_visited">最后访问</string>
    <string name="enter_search_keyword">请输入搜索内容</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="no_search_result">没有找到 “%1$s” 相关的打工圈</string>
    <string name="try_other_search_keyword">你可以尝试更改搜索关键词，或申请创建打工圈</string>
    <string name="create_circle">创建打工圈</string>
    <string name="circle_full_name">打工圈全称</string>
    <string name="circle_abbreviation">打工圈短名称</string>
    <string name="current_location">当前位置</string>
    <string name="enter_captcha">输入验证码</string>
    <string name="change_captcha">换一张</string>
    <string name="invite_people">去邀请朋友</string>
    <string name="invite_people_info">邀请好友进入（需要3个朋友加入，才可以开通）</string>
    <string name="circle_name_length_long">打工圈名字太长</string>
    <string name="circle_short_name_length_long">打工圈短名称太长</string>
    <string name="success_created">提交成功，若审核通过，我们会及时通知，请耐心等候</string>
    <string name="not_select_circle">不设置在哪里上班，没法玩啊</string>
    <string name="friends_info">朋友(%1$d) | 工友(%2$d)</string>
    <string name="hidden_friends_feed">你朋友发了%1$d条帖子，但是被隐藏了</string>
    <string name="unlock_to_view">解锁查看</string>
    <string name="about">蓝莓的故事</string>
    <string name="no_publish_perm_tip">如果这里有%1$d个朋友在职，就能证明你也在这里工作过，就可以发帖啦。</string>
    <string name="no_perm_tip">为杜绝捣乱，只有证明你曾经在这里工作过，才可以发帖！\n\n解锁条件：当你有三个朋友把这里设为在职时，就能解锁发帖啦！</string>
    <string name="unlock_tip">当在厂里的朋友数量小于%1$d时，就太容易被你猜出作者是谁啦！为了保护作者，系统将隐藏他们发的秘密。\n\n解锁条件：厂里有%2$d个熟人在玩时，将立刻解锁朋友的秘密。</string>
    <string name="display_more_feeds">查看%s条内容</string>
    <string name="invite_code">专属邀请码</string>
    <string name="introduce_to_friends">介绍给朋友</string>
    <string name="comment">评论</string>
    <string name="anonymously_comment">匿名发表评论</string>
    <string name="comment_action">评论操作</string>
    <string name="post_action">帖子操作</string>
    <string name="give_us_feedback">向我们提出建议</string>
    <string name="praise_count">我收到的赞</string>
    <string name="praise_count_rank">赞数全国排名%1$d，第一名收到的赞数是%2$d</string>
    <string name="praise_count_obtained">我收到的赞</string>
    <string name="praise_status">帖子获%1$d赞，评论获%2$d赞，超过全国%3$s的朋友</string>
    <string name="no_new_praise">没有新赞</string>
    <string name="praise_no_praise">你还没有收到赞</string>
    <string name="messages">评论消息</string>
    <string name="no_new_msg">没有新消息</string>
    <string name="no_msg">没有消息</string>
    <string name="invite_info">为了保护发帖人的隐私安全（不让你猜出是谁发的），当你有三个朋友在“%s”打工圈时，才可以查看。</string>
    <string name="current_friend_count">此圈内的通讯录朋友：%1$d</string>
    <string name="invite_contact_friends">邀请通讯录朋友加入</string>
    <string name="who_to_invite">想邀请谁？</string>
    <string name="no_permission_to_read_contacts">没有读取通讯录的权限</string>
    <string name="contacts_empty">通讯录为空</string>
    <string name="search_contact">搜人名</string>
    <string name="check_update">检查更新</string>
    <string name="help">使用帮助</string>
    <string name="no_perm_to_publish">你没有发帖的权限</string>
    <string name="find_friends">找出圈子里的朋友，看他们都在说什么？</string>
    <string name="circle_unlocked_tip">你还没有解锁这个圈子</string>
    <string name="unlock">解锁</string>
    <string name="crop_image">裁剪图片</string>
    <string name="notification_friend_new_post">你的朋友发了一条新帖子</string>
    <string name="notification_friends_new_posts">你的朋友发了%d条帖子</string>
    <string name="notification_circle_unlocked">新的朋友圈解锁了！</string>
    <string name="notification_circle_unlocked_tip">看看［%1$s］里的朋友发的帖子吧</string>
    <string name="notification_new">新提醒</string>
    <string name="notification_new_follow_comment">你关注的帖子有了新的评论</string>
    <string name="notification_new_own_comment">你发布的帖子有了新的评论</string>
    <string name="notification_new_follow_comments">你关注的%d条帖子有了新的评论</string>
    <string name="notification_new_own_comments">你发布的%d条帖子有了新的评论</string>
    <string name="notification_new_friend">新朋友加入</string>
    <string name="notification_new_friend_tip">［%s］的朋友数＋1，能猜到他是谁吗</string>
    <string name="notification_new_friend_tip_plural">［%1$s］的朋友数＋%2$d，能猜到他们是谁吗</string>
    <string name="notification_circle_create_approve">圈子审核通过</string>
    <string name="notification_circle_create_approve_tip">你申请创建的圈子［%1$s］已经审核通过了</string>
    <string name="overlay_tip_source">发这条帖子的人，你肯定认识。TA会是你的朋友或朋友的朋友。</string>
    <string name="overlay_tip_repost">你会看到是因为这条帖子在这个厂很火！而且你的朋友正在关注。</string>
    <string name="overlay_tip_praise">赞，可以鼓励作者，并且当该帖子被评论时，你将收到提醒</string>
    <string name="overlay_tip_portrait">每次评论新的帖子，你的头像都会不同，这是你在帖子里的临时身份。</string>
    <string name="overlay_tip_share">遇到感兴趣的帖子时，记得分享给朋友哦！</string>
    <string name="overlay_tip_temp_name">临时名，发帖时带上专属昵称，让自己的帖子更有个性。</string>
    <string name="overlay_tip_tags">标签，是对帖子的分类；打上标签，有价值的帖子会被集中展现和回复。</string>
    <string name="overlay_tip_post_page">这是一个长文帖，可左右滑动，翻页查完整内容哦</string>
    <string name="overlay_tip_topic">点击这里可以继续浏览该话题其他帖子，深入参与话题哦</string>
    <string name="ask_question">我要提问</string>
    <string name="web_load_failed">页面加载失败</string>
    <string name="exit_app">关闭应用</string>
    <string name="later">稍后再说</string>
    <string name="newest_version">已经是最新版本</string>
    <string name="silent_mode">静音模式</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="join_qq_group">加入官方QQ群</string>
    <string name="my_friends">我的朋友</string>
    <string name="add_new_friend">添加朋友</string>
    <string name="my_id">我的蓝莓ID：%1$s</string>
    <string name="scan_to_be_friend">让小伙伴扫一扫，即可加为蓝莓朋友</string>
    <string name="people_know_you_count">* %1$d个认识你的人会收到你发的帖子</string>
    <string name="friends_in_contact">通讯录联系人 (%1$d)</string>
    <string name="friends_from_scan">来自扫一扫添加 (%1$d)</string>
    <string name="known_people">我认识的人</string>
    <string name="rotate">旋转</string>
    <string name="publish_anonymous">参与话题</string>
    <string name="all_topic">全部话题</string>
    <string name="change">更改在职</string>
    <string name="dev_mode">开发者模式</string>
    <string name="unfollow">取消关注</string>
    <string name="clear_cache">清楚图片和数据缓存</string>
    <string name="vibrate_mode_info">开启后无提示音及震动</string>
    <string name="image_viewer">查看大图</string>
    <string name="saved">保存成功</string>
    <string name="failed_to_save">保存失败</string>
    <string name="profile_fill">完善资料</string>
    <string name="skip">跳过</string>
    <string name="profile">个人资料</string>
    <string name="profile_edit">编辑资料</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="submit">提交</string>
    <string name="birthday_edit">修改生日</string>
    <string name="avatar_viewer">查看头像</string>
    <string name="avatars">头像相册</string>
    <string name="name_edit">修改昵称</string>
    <string name="friend_request">朋友请求</string>
    <string name="follow_circle">我关注的圈子</string>
    <string name="my_signatures">我的签名</string>
    <string name="my_posts">我的帖子</string>
    <string name="his_posts">他的帖子</string>
    <string name="daily_picks">每日精选</string>
    <string name="all_tags">所有标签</string>
    <string name="settings_msg">消息设置</string>
</resources>