<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res/com.utree.eightysix"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/apptheme_primary_grey_color"
        >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent"
            >

        <LinearLayout
                android:id="@+id/ll_check_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:background="@drawable/apptheme_primary_list_selector"
                >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingRight="15dp"
                    android:paddingEnd="15dp"
                    android:orientation="vertical"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/check_update"
                        />

                <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical"
                        android:textSize="12sp"
                        android:textColor="@color/apptheme_primary_grey_color_pressed"
                        />

            </LinearLayout>

            <com.utree.eightysix.widget.RoundedButton
                    android:id="@+id/rb_upgrade_dot"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="invisible"
                    app:radius="5dp"
                    app:bgColor="@color/apptheme_secondary_light_color"
                    />

        </LinearLayout>


        <TextView
                android:id="@+id/tv_dev"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/dev_mode"
                android:background="@drawable/apptheme_primary_list_selector"
                android:visibility="gone"
                />


        <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/feedback"
                android:background="@drawable/apptheme_primary_list_selector"
                />

        <include layout="@layout/widget_primary_divider"/>

        <TextView
                android:id="@+id/tv_help"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/help"
                android:background="@drawable/apptheme_primary_list_selector"
                />

        <include layout="@layout/widget_primary_divider"/>

        <TextView
                android:id="@+id/tv_join_qq"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/join_qq_group"
                android:background="@drawable/apptheme_primary_list_selector"
                />

        <TextView
                android:id="@+id/tv_msg_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/settings_msg"
                android:background="@drawable/apptheme_primary_list_selector"
                />

        <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:background="@drawable/apptheme_primary_list_selector"
                />

        <include layout="@layout/widget_primary_divider"/>
    </LinearLayout>

</FrameLayout>
