<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res/com.utree.eightysix"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:background="@android:color/white"
        >

    <LinearLayout
            android:id="@+id/page_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="visible"
            >

        <TextView
                android:id="@+id/receiving_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:text="@string/receiving_captcha"
                android:textColor="@color/apptheme_primary_dark_color"
                />

        <include layout="@layout/widget_phone_number"/>

        <include layout="@layout/widget_captcha"/>

        <com.utree.eightysix.widget.RoundedButton
                android:id="@+id/btn_ok_1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/okay"
                app:radius="2dp"
                app:background="@color/apptheme_primary_btn_light"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/page_2"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            >

        <include
                layout="@layout/widget_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                />

        <com.utree.eightysix.widget.RoundedButton
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/done"
                android:enabled="false"
                app:radius="2dp"
                app:background="@color/apptheme_primary_btn_light"
                />

    </LinearLayout>

</FrameLayout>