<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.utree.eightysix"
              android:orientation="vertical"
              android:layout_width="168dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical">

    <RelativeLayout
            android:id="@+id/rl_invite_code"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

        <TextView
                style="@style/TextView.SingleLine"
                android:id="@+id/tv_invite_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="45dp"
                android:gravity="center_vertical"
                android:text="@string/invite_code"
                android:textSize="16sp"
                android:textColor="@color/apptheme_side_drawer_selector"
                />

        <com.utree.eightysix.widget.RoundedButton
                android:id="@+id/rb_invite_code_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_invite_code"
                android:layout_toEndOf="@+id/tv_invite_code"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="新"
                android:textSize="12sp"
                android:minHeight="0dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:radius="2dp"
                app:bgColor="@color/apptheme_secondary_light_color"
                />

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff697289"/>

    <LinearLayout
            android:id="@+id/ll_invite"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

        <TextView
                style="@style/TextView.SingleLine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="45dp"
                android:gravity="center_vertical"
                android:text="@string/introduce_to_friends"
                android:textSize="16sp"
                android:textColor="@color/apptheme_side_drawer_selector"
                />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff697289"/>

    <RelativeLayout
            android:id="@+id/rl_praise_count"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

        <TextView
                style="@style/TextView.SingleLine"
                android:id="@+id/tv_praise_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="45dp"
                android:gravity="center_vertical"
                android:text="@string/praise_count_obtained"
                android:textSize="16sp"
                android:textColor="@color/apptheme_side_drawer_selector"
                />

        <com.utree.eightysix.widget.RoundedButton
                android:id="@+id/rb_new_praise_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_praise_count"
                android:layout_toEndOf="@+id/tv_praise_count"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="新"
                android:textSize="12sp"
                android:minHeight="0dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:radius="2dp"
                app:bgColor="@color/apptheme_secondary_light_color"
                />

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff697289"/>

    <RelativeLayout
            android:id="@+id/rl_my_friends"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

        <TextView
                style="@style/TextView.SingleLine"
                android:id="@+id/tv_my_friends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="45dp"
                android:gravity="center_vertical"
                android:text="@string/my_friends"
                android:textSize="16sp"
                android:textColor="@color/apptheme_side_drawer_selector"
                />

        <com.utree.eightysix.widget.RoundedButton
                android:id="@+id/rb_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@+id/tv_my_friends"
                android:layout_toEndOf="@+id/tv_my_friends"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:minHeight="0dp"
                android:paddingLeft="4dp"
                android:paddingTop="2dp"
                android:paddingRight="4dp"
                android:paddingBottom="2dp"
                android:text="添加"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff697289"/>

    <RelativeLayout
            android:id="@+id/rl_topic_list"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

        <TextView
                style="@style/TextView.SingleLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="45dp"
                android:text="热门话题"
                android:textSize="16sp"
                android:textColor="@color/apptheme_side_drawer_selector"
                />

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff697289"/>

    <RelativeLayout
            android:id="@+id/ll_settings"
            android:layout_width="match_parent"
            android:layout_height="70dp">

        <TextView
                style="@style/TextView.SingleLine"
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="45dp"
                android:text="@string/settings"
                android:textSize="16sp"
                android:textColor="@color/apptheme_side_drawer_selector"
                />

        <com.utree.eightysix.widget.RoundedButton
                android:id="@+id/rb_settings_dot"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_toEndOf="@+id/tv_settings"
                android:layout_toRightOf="@+id/tv_settings"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:radius="5dp"
                app:bgColor="@color/apptheme_secondary_light_color"
                />

    </RelativeLayout>
</LinearLayout>